--- a/frontend/FishMaster/package.json
+++ b/frontend/FishMaster/package.json
@@ -13,7 +13,8 @@
     "react": "^19.2.0",
     "react-custom-scroll": "^7.0.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.10.1"
+    "react-router-dom": "^7.10.1",
+    "react-wavify": "^1.11.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
