--- a/frontend/FishMaster/package.json
+++ b/frontend/FishMaster/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "aos": "^2.3.4",
+    "gsap": "^3.14.2",
     "react": "^19.2.0",
     "react-custom-scroll": "^7.0.0",
     "react-dom": "^19.2.0",
