--- a/frontend/FishMaster/package.json
+++ b/frontend/FishMaster/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@gsap/react": "^2.1.2",
     "aos": "^2.3.4",
+    "chart.js": "^4.5.1",
     "gsap": "^3.14.2",
     "react": "^19.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-custom-scroll": "^7.0.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
